Fix horizontal scroll for education page and enforce use of inline svg instead of img src

--- a/src/pages/education/EducationComponent.css
+++ b/src/pages/education/EducationComponent.css
@@ -1,5 +1,6 @@
 .education-main {
   text-align: center;
+  overflow-x: hidden;
 }
 
 .basic-education {
